--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <h1 id="copyright">
       Built with <span style="color: red">&#9829;</span> by Aadesh Kulkarni
     </h1>
-    <audio id="audio" controls autoplay muted style="">
+    <audio id="audio" controls autoplay playsinline style="">
       <source src="./img//der_lagi.mp3" />
       unsupported !!
     </audio>
